# ray-tracing-in-one-weekend

./: .gitignore  Cargo.toml  README.md  about.toml  license.html
benches/: benchmark.rs
images/: book1-ppm6-4.ppm  cylinder.ppm  ppm4.ppm  ppm5.ppm  ppm6.ppm  ppm7.ppm  ppm8.ppm  ppm8_hemisphere.ppm  ppm8_lambert.ppm  ppm9.ppm
src/: camera.rs  color.rs  hitrecord.rs  hittable.rs  lib.rs  materials.rs  perlin.rs  point.rs  ppm.rs  ray.rs  raytracer.rs  shapes.rs  sphere.rs  textures.rs  vec3.rs
src/old_bin/: book1-chapter10.rs  book1-chapter2.rs  book1-chapter4.rs  book1-chapter5.rs  book1-chapter6-4.rs  book1-chapter6.rs  book1-chapter7.rs  book1-chapter8.rs  book1-chapter9.rs  book2-chapter2.rs  book2-chapter3.rs  book2-chapter5.rs
