[package]
name = "raytracing-in-one-weekend"
author = "Christopher Hecker"
description = "Implementation of Raytracing in One Weekend by Peter Shirley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
indicatif = "0.17.3"
rand = "0.8.5"
rayon = "1.6.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false
