[package]
name = "ray-tracing-in-one-weekend"
authors = ["Christopher Hecker"]
description = "Implementation of Ray Tracing in One Weekend by Peter Shirley"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
indicatif = "0.17.3"
nalgebra = "0.32.2"
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.4.0"

[profile.dev]
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
