[package]
name = "ray-tracing-in-one-weekend"
authors = ["Christopher Hecker"]
description = "Implementation of Ray Tracing in One Weekend by Peter Shirley"
license = "MIT"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
indicatif = "0.17.8"
nalgebra = "0.32.4"
rand = "0.8.5"
rayon = "1.8.1"

[dev-dependencies]
criterion = "0.5.1"

[profile.dev]
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
